# deepagents-idle-compaction

./: README.md  demo.py  pyproject.toml  sweep_job.example.py  sweeper_demo.py
src/idle_compaction/: __init__.py  cli.py  middleware.py  sweeper.py
tests/: _shared.py  factory_full.py  full_phases.py  test_compaction.py  xproc.py
