[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-idle-compaction"
version = "0.1.0"
description = "Idle + size triggered conversation compaction middleware for LangChain / deepagents, to cut prompt-cache re-write costs on resume."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cooper Penniman" }]
keywords = ["langchain", "langgraph", "deepagents", "compaction", "prompt-cache", "middleware"]
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.0",
]

[project.scripts]
idle-compaction-sweep = "idle_compaction.cli:main"

[project.optional-dependencies]
# The sweeper is checkpointer-agnostic; the demos/tests use the sqlite saver.
demo = ["deepagents>=0.6", "langgraph-checkpoint-sqlite>=2.0"]
dev = ["deepagents>=0.6", "langgraph-checkpoint-sqlite>=2.0", "pytest>=8", "pytest-timeout>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
